# footstep-prediction

./: .gitignore  CMakeLists-AU.txt  CMakeLists.mac.txt  CMakeLists.txt  Untitled.ipynb  final_training2.ipynb  footstep_detector_realistic.keras  footstep_detector_realistic.tflite
.github/workflows/: build-au-test.yml  build-windows-standalone.yml  build-windows-vst2.yml  build-windows.yml
.ipynb_checkpoints/: final_training-checkpoint.ipynb  final_training2-checkpoint.ipynb
FootstepDetector-VST2-FINAL-CORRECTED-SUCCESS/: FINAL_CORRECTED_SUCCESS_GUIDE.txt
JUCE/DemoRunner.app/Contents/: Info.plist
JUCE/Projucer.app/Contents/: Info.plist
au-build/: CMakeLists.txt
au-build/JUCE/DemoRunner.app/Contents/: CodeResources
au-build/JUCE/DemoRunner.app/Contents/_CodeSignature/: CodeResources
au-build/JUCE/Projucer.app/Contents/: CodeResources
au-build/vst_plugin/: FootstepDetector.jucer
au-build/vst_plugin/Source/: FootstepClassifier.h  MFCCExtractor.h  PluginEditor.cpp  PluginEditor.h
cpp_integration/: FootstepClassifier.h  FootstepDetectorProcessor.h  FootstepFeatureExtractor.h  ModelParameters.h
models/: enhanced_footstep_classifier.pkl  enhanced_footstep_model.json  essential_model.pkl  feature_scaler.pkl  footstep_classifier.pkl  footstep_model_cpp.json  footstep_model_simple.json  model_metadata.json  professional_footstep_model.json  professional_rf_model.pkl
models1/: production_footstep_model.json
vst_plugin/: DEVELOPMENT_INSTRUCTIONS.md
vst_plugin/Source/: FootstepClassifier.cpp  FootstepClassifier.h  MFCCExtractor.cpp  MLFootstepClassifier.cpp  MLFootstepClassifier.h  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp
vst_plugin/Source/models/: deployment_package_realistic.pkl
